# Engine

./: .gitignore  AppConfig.h  CMakeLists.txt  D2DGraphicsManager.cpp  D2DGraphicsManager.h  D3D11GraphicManager.cpp  D3D11GraphicManager.h  D3D11GraphicsManager.cpp  D3D11GraphicsManager.h  D3D12GraphicsManager.cpp  D3D12GraphicsManager.h  IDrawNode.h  MainApp.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGLApplicationContext.h  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  Singleton.cpp  Singleton.h  Triangles.cpp  Triangles.h  Win32Application.cpp  Win32Application.h  Win32ApplicationContext.h  imgui.ini
Common/: BaseApplication.cpp  BaseApplication.h  GraphicsManager.cpp  GraphicsManager.h  main.cpp
Core/: AppConfig.h  AssetLoader.cpp  AssetLoader.h  BaseApplication.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Header.h  IApplication.h  IBehavior.h  IComponent.h  Image.cpp  Image.h  Math.hpp  StepTimer.h  main.cpp
res/: simple.fs.glsl  simple.vs.glsl
